Edited figures 3 and 7

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -245,7 +245,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
 \begin{figure}
 	\centering	
 	\includegraphics[width=0.8\textwidth]{StellarRadiusZsolarRoche.png}
-\caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the implementation of single stellar evolution models of \citet{Hurley:2000} in the COMPAS binary population synthesis code \citep{COMPAS:2021}.   The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence (MS), Hertzsprung gap (HG), core Helium burning (CHeB) stages, and the asymptotic giant branch (AGB) for lower-mass stars.  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer \citep{Eggleton:1983}) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.\label{fig:Rmax} }
+\caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the implementation of single stellar evolution models of \citet{Hurley:2000} in the COMPAS binary population synthesis code \citep{COMPAS:2021}.   The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence (MS), Hertzsprung gap (HG), core Helium burning (HeB) stages, and the asymptotic giant branch (AGB -- here also used colloquially for hydrogen-rich massive stars with a carbon/oxygen core).  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer \citep{Eggleton:1983}) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.\label{fig:Rmax} }
 \end{figure}
 
 \textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers should not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} predicted that binary compact objects must naturally (albeit rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe \citep[for early explanations of its formation in the context of binary evolution, see][]{FlanneryvdH:1975,DeLoore:1975}.
@@ -445,7 +445,7 @@ The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\textwidth]{BHremnantdelayed.png}
-	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{COMPAS:2021}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar  (blue) and a tenth solar (red) metallicities.  
+	\caption{\label{fig:BHremnant} Remnant compact object mass from single stellar evolution for a given zero-age main sequence stellar mass, following the default COMPAS prescription for winds \citep{COMPAS:2021}  and the `delayed' \citet{Fryer:2012} supernova fallback prescription, at solar  ($Z=0.0142$, blue) and low ($Z=0.001$, red) metallicities.  
 	} 
 \end{figure}
 
