--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -250,10 +250,11 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 \textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers should not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} predicted that binary compact objects must naturally (albeit rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe \citep[for early explanations of its formation in the context of binary evolution, see][]{FlanneryvdH:1975,DeLoore:1975}.
 
-Three leading formation scenarios have been proposed for merging compact-object binaries: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from stars not born in the same binary. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black-hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
+The proposed formation scenarios for merging compact-object binaries generally fall into two broad categories: the evolution of isolated binaries composed of two massive stars and binaries which merge with the assistance of gravitational dynamical interactions.  Below, we discuss four examples of these scenarios: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; (iii) assembly of a close binary from black holes that formed from stars not born in the same binary; and (iv) stellar and binary evolution and dynamics operating jointly in triple systems.   Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black-hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
 
-We explore the three leading formation scenarios in more detail below, as well as the possibility that some combination of these effects may occur on the way to merger. We will not discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} (\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture).  
+We explore these formation scenarios in more detail below. We will not discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} (\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture).  
 
+\textbf{Primordial black holes:}  We focus on black holes of astrophysical origin.   Mergers of primordial black holes formed through the collapse of early-Universe density perturbations have been proposed as sources of gravitational waves \citep{Bird:2016}.   The contribution of primordial black hole mergers to the observed population of gravitational-wave signals is sensitive to the masses of primordial black holes, the total fraction of dark matter they comprise, their initial distribution in binaries or small clusters, and the possibility of gas accretion onto primordial black holes \citep{AliHaimoud:2017, ChenHuang:2018, Korol:2019, DeLuca:2020b, DeLuca:2020a}.
 
 \subsection{The Candidate Formation Scenarios}
 \subsubsection{Coming closer later in life: classical isolated binary evolution via the common-envelope phase}
@@ -332,7 +333,6 @@ Hierarchical triple systems, with a tight inner binary and a third companion on 
 
 When the outer binary's orbit is $\gtrsim 5$ times wider than the inner orbit, the triple will be stable (though it may still be driven to instability by mass loss \citep[e.g.,][]{PeretsKratter:2012}).  If the inner and outer orbits in a stable triple have a high relative inclination angle, the transfer of angular momentum between these orbits can increase the eccentricity of the inner binary while keeping its semi-major axis roughly constant. For suitable initial conditions, these Lidov-Kozai oscillations in eccentricity and orbital inclination \citep{Lidov:1962,Kozai:1962} may lead to a drastic growth in the inner binary's eccentricity \citep[for a review, see][]{Naoz:2016}, reducing the binary's periapsis to the point where gravitational-wave emission can harden the binary to merger.  Recent arguments that Lidov-Kozai cycles could contribute to binary black hole mergers include \citet{SilsbeeTremaine:2017} who explored isolated triples, \citet{Antonini:2016} and \citet{Martinez:2020} in the context of dynamically formed triples in globular clusters, and \citet{Hoang:2018} who considered triples with a galactic-centre massive black hole as the outer companion.
 
-\textbf{Primordial black holes:}  So far, we discussed black holes of astrophysical origin.   Mergers of primordial black holes formed through the collapse of early-Universe density perturbations have been proposed as sources of gravitational waves \citep{Bird:2016}.   The contribution of primordial black hole mergers to the observed population of gravitational-wave signals is sensitive to the masses of primordial black holes, the total fraction of dark matter they comprise, their initial distribution in binaries or small clusters, and the possibility of gas accretion onto primordial black holes \citep{AliHaimoud:2017, ChenHuang:2018, Korol:2019, DeLuca:2020b, DeLuca:2020a}.
 
 \section{Expected properties of merging systems}\label{merge}
 
