--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -250,9 +250,9 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 \textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers should not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} predicted that binary compact objects must naturally (albeit rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe \citep[for early explanations of its formation in the context of binary evolution, see][]{FlanneryvdH:1975,DeLoore:1975}.
 
-The proposed formation scenarios for merging compact-object binaries generally fall into two broad categories: the evolution of isolated binaries composed of two massive stars and binaries which merge with the assistance of gravitational dynamical interactions.  Below, we discuss four examples of these scenarios: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; (iii) assembly of a close binary from black holes that formed from stars not born in the same binary; and (iv) stellar and binary evolution and dynamics operating jointly in triple systems.   Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black-hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
+The proposed formation scenarios for merging compact-object binaries generally fall into two broad categories: the evolution of isolated binaries composed of two massive stars and binaries which form or merge with the assistance of gravitational dynamical interactions.  Below, we discuss four examples of these scenarios: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; (iii) assembly of a close binary from black holes that formed from stars not born in the same binary; and (iv) stellar and binary evolution and dynamics operating jointly in triple systems.   Contrived as these scenarios sound, all four might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black-hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
 
-We explore these formation scenarios in more detail below. We will not discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} (\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture).  
+We explore these four formation scenarios in more detail below. We will not discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} (\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture).  
 
 \textbf{Primordial black holes:}  We focus on black holes of astrophysical origin.   Mergers of primordial black holes formed through the collapse of early-Universe density perturbations have been proposed as sources of gravitational waves \citep{Bird:2016}.   The contribution of primordial black hole mergers to the observed population of gravitational-wave signals is sensitive to the masses of primordial black holes, the total fraction of dark matter they comprise, their initial distribution in binaries or small clusters, and the possibility of gas accretion onto primordial black holes \citep{AliHaimoud:2017, ChenHuang:2018, Korol:2019, DeLuca:2020b, DeLuca:2020a}.
 
@@ -260,20 +260,20 @@ We explore these formation scenarios in more detail below. We will not discuss s
 \subsubsection{Coming closer later in life: classical isolated binary evolution via the common-envelope phase}
 \label{form:isol}
 
-The first possible channel is perhaps the most studied one, placing merging black-hole binaries in the same framework as other very close binaries (such as cataclysmic variables) in which at least one of the stars has extended beyond the binary's current orbital separation during an earlier stage of its evolution \citep[e.g.,][]{Paczynski:1976}. 
+The first channel we describe is perhaps the most studied one, placing merging black-hole binaries in the same framework as other very close binaries (such as cataclysmic variables) in which at least one of the stars has extended beyond the binary's current orbital separation during an earlier stage of its evolution \citep[e.g.,][]{Paczynski:1976}. 
 
 In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase; see \citet{Ivanova:2013} for a review. The resulting tight binary may then be close enough to merge through gravitational-wave emission.  \citet{SmarrBlandford:1976} may have been the first to explicitly point to this channel in the context of compact object binary formation when analysing the evolutionary history of the Hulse--Taylor binary pulsar. The channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2001,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarising all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.45\textwidth]{channel1.png}
-	\caption{\label{fig:isol_binary} A sketch of merging black-hole binary formation through isolated binary evolution via the common envelope phase.}
+	\caption{\label{fig:isol_binary} A sketch of merging black-hole binary formation through isolated binary evolution via the common envelope phase.  The steps are described in section \ref{form:isol}.}
 \end{figure}
 
 An example of the evolution of this system is sketched out in a van den Heuvel -- style diagram in \autoref{fig:isol_binary}, and the steps below follow the panels in that figure:
 \begin{enumerate}  
 \item[a.] Two massive stars of perhaps $100$ and $75$ $M_{\odot}$ are born in a binary at a separation of $\sim 10$ AU in a low-metallicity environment ($\sim 5\%$ of solar metallicity).  
-\item[b.] The more massive primary reaches the end of its main sequence evolution first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The associated release of gravitational binding energy and the eventual onset of hydrogen shell burning cause the hydrogen-rich envelope to expand.  For a sufficiently close binary, the primary expands past the equipotential surface known as the Roche Lobe and begins to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and could be significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary, in addition to wind-driven mass loss, can widen the system to perhaps $\sim 20$ AU.  
+\item[b.] The more massive primary reaches the end of its main sequence evolution first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The associated release of gravitational binding energy and the eventual onset of hydrogen shell burning cause the hydrogen-rich envelope to expand.  For a sufficiently close binary, the primary expands past the equipotential surface known as the Roche Lobe and begins to transfer mass onto the secondary.  This mass transfer proceeds on the thermal timescale of the primary donor and could be significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary, in addition to wind-driven mass loss, can widen the system to perhaps $\sim 20$ AU.  
 \item[c.] The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  
 \item[d.] Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  
 \item[e.] When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova (if the fallback is not complete).  The mass transfer on to the black hole would need to be almost wholly non-conservative if the accretion obeys the Eddington limit, which corresponds to an equilibrium between gravity and the pressure of the radiation released during accretion on infalling material.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor as it loses mass.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  
@@ -282,14 +282,14 @@ An example of the evolution of this system is sketched out in a van den Heuvel -
 \item[h.] Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black-hole binary is formed.  While this entire process takes only a few million years from the formation of a stellar binary to the formation of a binary black hole, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
 \end{enumerate}
 
-Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables \citep[massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss,][]{Mennekens:2014}  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer \citep{KippenhahnMeyerHofmeister:1977} and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \citep[e.g.,][]{Kruckow:2016,Klencki:2020convective,Fragos:2019,LawSmith:2020}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Fryer:2012,Repetto:2012,Mandel:2015kicks,Mueller:2020}; the possibility of double-core common envelopes when unstable mass transfer is initiated between two evolved stars \citep{BetheBrown:1998,Dewi:2006}; and the amount of mass that can be accreted onto a black hole \citep{Eldridge:2017,Bavera:2020,vanSon:2020}.  Moreover, some isolated binaries could form merging binary black holes entirely through dynamically stable mass transfer, with sufficient binary hardening achieved by non-conservative mass transfer onto a lower-mass compact donor rather than a common-envelope event \citep{vandenHeuvel:2017,Pavlovskii:2017,Neijssel:2018,vanSon:2021}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
+Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables (massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss \citep{Mennekens:2014})  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer \citep{KippenhahnMeyerHofmeister:1977} and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \citep[e.g.,][]{Kruckow:2016,Klencki:2020convective,Fragos:2019,LawSmith:2020,Lau:2021}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Fryer:2012,Repetto:2012,Mandel:2015kicks,Mueller:2020}; the possibility of double-core common envelopes when unstable mass transfer is initiated between two evolved stars \citep{BetheBrown:1998,Dewi:2006}; and the amount of mass that can be accreted onto a black hole \citep{Eldridge:2017,Bavera:2020,vanSon:2020}.  Moreover, some isolated binaries could form merging binary black holes entirely through dynamically stable mass transfer, with sufficient binary hardening achieved by non-conservative mass transfer onto a lower-mass compact donor rather than a common-envelope event \citep{vandenHeuvel:2017,Pavlovskii:2017,Neijssel:2018,vanSon:2021}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
-\subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}\label{sec:CHE}
+\subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}\label{form:CHE}
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.4\textwidth]{channel2.png}
-	\caption{\label{fig:chem_homog} A sketch of merging black-hole binary formation via the chemically homogeneous evolution channel.}
+	\caption{\label{fig:chem_homog} A sketch of merging black-hole binary formation via the chemically homogeneous evolution channel.  The steps are described in section \ref{form:CHE}.}
 \end{figure}
 
 What if some types of massive stars did not expand and converted most of their mass into a black hole? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger; if almost all of the star's mass was converted into a black hole rather than the $\sim$30--50\% of the mass which typically becomes the helium core (see \autoref{fig:BHremnant}), the merger timescale would shrink for a given separation, lifting the Roche lobe radius curve in \autoref{fig:Rmax} and removing the ``separation problem at birth''.  No fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries.   Efficient mixing in high-mass, low-metallicity stars in close binaries, known as chemically homogeneous evolution, could enable this scenario.
@@ -307,12 +307,12 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 
 
 
-\subsubsection{The black-hole matchmaking club: dynamical formation in dense stellar environments}
+\subsubsection{The black-hole matchmaking club: dynamical formation in dense stellar environments}\label{form:dyn}
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.4\textwidth]{channel3.png}
-	\caption{\label{fig:dynamical} A sketch of merging black-hole binary formation via the dynamical evolution channel.}
+	\caption{\label{fig:dynamical} A sketch of merging black-hole binary formation via the dynamical evolution channel.  The steps are described in section \ref{form:dyn}.}
 \end{figure}
 
 The merging black holes may not have formed in the same binary at all.  Instead, in this channel, they formed from the collapse of independent massive stars (perhaps single, or each in its own separate binary), but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
@@ -417,7 +417,7 @@ The mass ratios of merging black-hole binaries produced through the isolated bin
 
 Dynamically formed binaries may also favour comparable masses because the heaviest black holes in a cluster are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a $\gtrsim 100 M_\odot$ intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
 
-Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016,Riley:2020} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in section \ref{sec:CHE}. 
+Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016,Riley:2020} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in section \ref{form:CHE}. 
 
 \subsubsection{Black-hole spin magnitudes and directions}\label{BHspins}
 The spins of merging black holes may carry imprints of their evolutionary history. 
